<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:padding="16dp" >
	    
	    <!-- Started -->
	    <LinearLayout	        
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        style="@style/ItemBox"
	        >
		    <TextView
		        android:text="@string/label_activity_started_at"
		        style="@style/ItemLabel"
		        />
		    <View 
		        android:layout_width="match_parent"
		        android:layout_height="1dp"
		        style="@style/ItemBorder"
		        />
		    <TextView 
		        android:id="@+id/txt_activity_started_at"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        style="@style/ItemData"
		        />
	    </LinearLayout>
	    
	    <!-- Ended -->
	    <LinearLayout
	        android:id="@+id/box_activity_ended_at"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        style="@style/ItemBox"
	        android:visibility="gone"
	        >
		    <TextView
		        android:text="@string/label_activity_ended_at"
		        style="@style/ItemLabel"
		        />
	   	   <View 
		        android:layout_width="match_parent"
		        android:layout_height="1dp"
		        style="@style/ItemBorder"
		        />
		    <TextView 
		        android:id="@+id/txt_activity_ended_at"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        style="@style/ItemData"
		        />
	    </LinearLayout>
	    
	    <!-- Duration -->
	    <LinearLayout 
	        android:layout_height="match_parent"
	        android:layout_width="wrap_content"
	        android:orientation="vertical"
	        style="@style/ItemBox"
	        >
		    <TextView
		        android:text="@string/label_activity_duration"
		        style="@style/ItemLabel"
		        />
	   	   <View 
		        android:layout_width="match_parent"
		        android:layout_height="1dp"
		        style="@style/ItemBorder"
		        />
		    <TextView 
		        android:id="@+id/txt_activity_duration"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        style="@style/ItemData"
		        />
		</LinearLayout>
	    
	    <!-- Label -->
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" 
	        style="@style/ItemBox"  
	        >        
	        <TextView
	        	android:text="@string/label_label"
	        	style="@style/ItemLabel"
	            />
	   	   	<View 
		        android:layout_width="match_parent"
		        android:layout_height="1dp"
		        style="@style/ItemBorder"
		        />    
	        <Spinner
		        android:id="@+id/spinner_labels"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:padding="8dp"
		        />
	        <TextView 
	            android:id="@+id/txt_spinner_no_spinner_txt"
	            android:layout_width="match_parent"
	        	android:layout_height="wrap_content"
	        	android:visibility="gone"
	        	style="@style/ItemData"     
	            />        
	    </LinearLayout>
	    
	    <!-- Description -->
	    <LinearLayout 
	        android:id="@+id/box_desc"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:orientation="vertical"
	        style="@style/ItemBox"
	        android:visibility="gone"
	        >        
	    	<TextView
	    	    android:text="@string/label_activity_description"
	    	    style="@style/ItemLabel"
	    	    />
	   	   	<View 
		        android:layout_width="match_parent"
		        android:layout_height="1dp"
		        style="@style/ItemBorder"
		        />	
	    	<TextView 
	    	    android:id="@+id/txt_description"
	    	    android:layout_width="match_parent"
	    	    android:layout_height="wrap_content"
	    	    android:hint="@string/hint_no_description"
	    	    style="@style/ItemData"
	    	    />
	    </LinearLayout>
	    
	    <!-- Stop Button -->
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:minHeight="48dp"
	        style="@style/ItemBox"     
	        >   
		    <Button 
		        android:id="@+id/btn_stop_timer"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/btn_stop_timer"
		        android:padding="8dp"
		        style="@android:attr/borderlessButtonStyle"
		        />
	    </LinearLayout>
	
	</LinearLayout>
</ScrollView>